antlr/jsonParser.cpp

// Generated from json.g4 by ANTLR 4.7.2


#include "jsonListener.h"

#include "jsonParser.h"


using namespace antlrcpp;
using namespace antlr4;

jsonParser::jsonParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

jsonParser::~jsonParser() {
  delete _interpreter;
}

std::string jsonParser::getGrammarFileName() const {
  return "json.g4";
}

const std::vector<std::string>& jsonParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& jsonParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- JsonContext ------------------------------------------------------------------

jsonParser::JsonContext::JsonContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

jsonParser::ValueContext* jsonParser::JsonContext::value() {
  return getRuleContext<jsonParser::ValueContext>(0);
}


size_t jsonParser::JsonContext::getRuleIndex() const {
  return jsonParser::RuleJson;
}

void jsonParser::JsonContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<jsonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterJson(this);
}

void jsonParser::JsonContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<jsonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitJson(this);
}

jsonParser::JsonContext* jsonParser::json() {
  JsonContext *_localctx = _tracker.createInstance<JsonContext>(_ctx, getState());
  enterRule(_localctx, 0, jsonParser::RuleJson);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(36);
    value();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ValueContext ------------------------------------------------------------------

jsonParser::ValueContext::ValueContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

jsonParser::ObjectContext* jsonParser::ValueContext::object() {
  return getRuleContext<jsonParser::ObjectContext>(0);
}

jsonParser::ArrayContext* jsonParser::ValueContext::array() {
  return getRuleContext<jsonParser::ArrayContext>(0);
}

jsonParser::StringContext* jsonParser::ValueContext::string() {
  return getRuleContext<jsonParser::StringContext>(0);
}

jsonParser::NumberContext* jsonParser::ValueContext::number() {
  return getRuleContext<jsonParser::NumberContext>(0);
}

jsonParser::Bool_valContext* jsonParser::ValueContext::bool_val() {
  return getRuleContext<jsonParser::Bool_valContext>(0);
}

jsonParser::Null_valueContext* jsonParser::ValueContext::null_value() {
  return getRuleContext<jsonParser::Null_valueContext>(0);
}


size_t jsonParser::ValueContext::getRuleIndex() const {
  return jsonParser::RuleValue;
}

void jsonParser::ValueContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<jsonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterValue(this);
}

void jsonParser::ValueContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<jsonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitValue(this);
}

jsonParser::ValueContext* jsonParser::value() {
  ValueContext *_localctx = _tracker.createInstance<ValueContext>(_ctx, getState());
  enterRule(_localctx, 2, jsonParser::RuleValue);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(44);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case jsonParser::OPENING_CURLY: {
        enterOuterAlt(_localctx, 1);
        setState(38);
        object();
        break;
      }

      case jsonParser::LEFT_BRACKET: {
        enterOuterAlt(_localctx, 2);
        setState(39);
        array();
        break;
      }

      case jsonParser::QUOTE_MARK: {
        enterOuterAlt(_localctx, 3);
        setState(40);
        string();
        break;
      }

      case jsonParser::ZERO:
      case jsonParser::ONENINE:
      case jsonParser::PLUS:
      case jsonParser::MINUS: {
        enterOuterAlt(_localctx, 4);
        setState(41);
        number();
        break;
      }

      case jsonParser::TRUE_CONST:
      case jsonParser::FALSE_CONST: {
        enterOuterAlt(_localctx, 5);
        setState(42);
        bool_val();
        break;
      }

      case jsonParser::NULL_VALUE: {
        enterOuterAlt(_localctx, 6);
        setState(43);
        null_value();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ObjectContext ------------------------------------------------------------------

jsonParser::ObjectContext::ObjectContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* jsonParser::ObjectContext::OPENING_CURLY() {
  return getToken(jsonParser::OPENING_CURLY, 0);
}

tree::TerminalNode* jsonParser::ObjectContext::CLOSING_CURLY() {
  return getToken(jsonParser::CLOSING_CURLY, 0);
}

jsonParser::MembersContext* jsonParser::ObjectContext::members() {
  return getRuleContext<jsonParser::MembersContext>(0);
}


size_t jsonParser::ObjectContext::getRuleIndex() const {
  return jsonParser::RuleObject;
}

void jsonParser::ObjectContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<jsonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterObject(this);
}

void jsonParser::ObjectContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<jsonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitObject(this);
}

jsonParser::ObjectContext* jsonParser::object() {
  ObjectContext *_localctx = _tracker.createInstance<ObjectContext>(_ctx, getState());
  enterRule(_localctx, 4, jsonParser::RuleObject);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(46);
    match(jsonParser::OPENING_CURLY);
    setState(48);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == jsonParser::QUOTE_MARK) {
      setState(47);
      members();
    }
    setState(50);
    match(jsonParser::CLOSING_CURLY);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MembersContext ------------------------------------------------------------------

jsonParser::MembersContext::MembersContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<jsonParser::MemberContext *> jsonParser::MembersContext::member() {
  return getRuleContexts<jsonParser::MemberContext>();
}

jsonParser::MemberContext* jsonParser::MembersContext::member(size_t i) {
  return getRuleContext<jsonParser::MemberContext>(i);
}

std::vector<tree::TerminalNode *> jsonParser::MembersContext::COMMA() {
  return getTokens(jsonParser::COMMA);
}

tree::TerminalNode* jsonParser::MembersContext::COMMA(size_t i) {
  return getToken(jsonParser::COMMA, i);
}


size_t jsonParser::MembersContext::getRuleIndex() const {
  return jsonParser::RuleMembers;
}

void jsonParser::MembersContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<jsonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMembers(this);
}

void jsonParser::MembersContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<jsonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMembers(this);
}

jsonParser::MembersContext* jsonParser::members() {
  MembersContext *_localctx = _tracker.createInstance<MembersContext>(_ctx, getState());
  enterRule(_localctx, 6, jsonParser::RuleMembers);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(52);
    member();
    setState(57);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == jsonParser::COMMA) {
      setState(53);
      match(jsonParser::COMMA);
      setState(54);
      member();
      setState(59);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MemberContext ------------------------------------------------------------------

jsonParser::MemberContext::MemberContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

jsonParser::StringContext* jsonParser::MemberContext::string() {
  return getRuleContext<jsonParser::StringContext>(0);
}

tree::TerminalNode* jsonParser::MemberContext::SEPARATOR() {
  return getToken(jsonParser::SEPARATOR, 0);
}

jsonParser::ValueContext* jsonParser::MemberContext::value() {
  return getRuleContext<jsonParser::ValueContext>(0);
}


size_t jsonParser::MemberContext::getRuleIndex() const {
  return jsonParser::RuleMember;
}

void jsonParser::MemberContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<jsonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMember(this);
}

void jsonParser::MemberContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<jsonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMember(this);
}

jsonParser::MemberContext* jsonParser::member() {
  MemberContext *_localctx = _tracker.createInstance<MemberContext>(_ctx, getState());
  enterRule(_localctx, 8, jsonParser::RuleMember);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(60);
    string();
    setState(61);
    match(jsonParser::SEPARATOR);
    setState(62);
    value();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArrayContext ------------------------------------------------------------------

jsonParser::ArrayContext::ArrayContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* jsonParser::ArrayContext::LEFT_BRACKET() {
  return getToken(jsonParser::LEFT_BRACKET, 0);
}

tree::TerminalNode* jsonParser::ArrayContext::RIGHT_BRACKET() {
  return getToken(jsonParser::RIGHT_BRACKET, 0);
}

jsonParser::ElementsContext* jsonParser::ArrayContext::elements() {
  return getRuleContext<jsonParser::ElementsContext>(0);
}


size_t jsonParser::ArrayContext::getRuleIndex() const {
  return jsonParser::RuleArray;
}

void jsonParser::ArrayContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<jsonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArray(this);
}

void jsonParser::ArrayContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<jsonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArray(this);
}

jsonParser::ArrayContext* jsonParser::array() {
  ArrayContext *_localctx = _tracker.createInstance<ArrayContext>(_ctx, getState());
  enterRule(_localctx, 10, jsonParser::RuleArray);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(64);
    match(jsonParser::LEFT_BRACKET);
    setState(66);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << jsonParser::ZERO)
      | (1ULL << jsonParser::ONENINE)
      | (1ULL << jsonParser::OPENING_CURLY)
      | (1ULL << jsonParser::LEFT_BRACKET)
      | (1ULL << jsonParser::QUOTE_MARK)
      | (1ULL << jsonParser::TRUE_CONST)
      | (1ULL << jsonParser::FALSE_CONST)
      | (1ULL << jsonParser::NULL_VALUE)
      | (1ULL << jsonParser::PLUS)
      | (1ULL << jsonParser::MINUS))) != 0)) {
      setState(65);
      elements();
    }
    setState(68);
    match(jsonParser::RIGHT_BRACKET);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ElementsContext ------------------------------------------------------------------

jsonParser::ElementsContext::ElementsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<jsonParser::ElementContext *> jsonParser::ElementsContext::element() {
  return getRuleContexts<jsonParser::ElementContext>();
}

jsonParser::ElementContext* jsonParser::ElementsContext::element(size_t i) {
  return getRuleContext<jsonParser::ElementContext>(i);
}

std::vector<tree::TerminalNode *> jsonParser::ElementsContext::COMMA() {
  return getTokens(jsonParser::COMMA);
}

tree::TerminalNode* jsonParser::ElementsContext::COMMA(size_t i) {
  return getToken(jsonParser::COMMA, i);
}


size_t jsonParser::ElementsContext::getRuleIndex() const {
  return jsonParser::RuleElements;
}

void jsonParser::ElementsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<jsonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterElements(this);
}

void jsonParser::ElementsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<jsonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitElements(this);
}

jsonParser::ElementsContext* jsonParser::elements() {
  ElementsContext *_localctx = _tracker.createInstance<ElementsContext>(_ctx, getState());
  enterRule(_localctx, 12, jsonParser::RuleElements);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(70);
    element();
    setState(75);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == jsonParser::COMMA) {
      setState(71);
      match(jsonParser::COMMA);
      setState(72);
      element();
      setState(77);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ElementContext ------------------------------------------------------------------

jsonParser::ElementContext::ElementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

jsonParser::ValueContext* jsonParser::ElementContext::value() {
  return getRuleContext<jsonParser::ValueContext>(0);
}


size_t jsonParser::ElementContext::getRuleIndex() const {
  return jsonParser::RuleElement;
}

void jsonParser::ElementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<jsonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterElement(this);
}

void jsonParser::ElementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<jsonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitElement(this);
}

jsonParser::ElementContext* jsonParser::element() {
  ElementContext *_localctx = _tracker.createInstance<ElementContext>(_ctx, getState());
  enterRule(_localctx, 14, jsonParser::RuleElement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(78);
    value();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StringContext ------------------------------------------------------------------

jsonParser::StringContext::StringContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> jsonParser::StringContext::QUOTE_MARK() {
  return getTokens(jsonParser::QUOTE_MARK);
}

tree::TerminalNode* jsonParser::StringContext::QUOTE_MARK(size_t i) {
  return getToken(jsonParser::QUOTE_MARK, i);
}

jsonParser::CharactersContext* jsonParser::StringContext::characters() {
  return getRuleContext<jsonParser::CharactersContext>(0);
}


size_t jsonParser::StringContext::getRuleIndex() const {
  return jsonParser::RuleString;
}

void jsonParser::StringContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<jsonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterString(this);
}

void jsonParser::StringContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<jsonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitString(this);
}

jsonParser::StringContext* jsonParser::string() {
  StringContext *_localctx = _tracker.createInstance<StringContext>(_ctx, getState());
  enterRule(_localctx, 16, jsonParser::RuleString);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(80);
    match(jsonParser::QUOTE_MARK);
    setState(81);
    characters();
    setState(82);
    match(jsonParser::QUOTE_MARK);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CharactersContext ------------------------------------------------------------------

jsonParser::CharactersContext::CharactersContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<jsonParser::CharacterContext *> jsonParser::CharactersContext::character() {
  return getRuleContexts<jsonParser::CharacterContext>();
}

jsonParser::CharacterContext* jsonParser::CharactersContext::character(size_t i) {
  return getRuleContext<jsonParser::CharacterContext>(i);
}


size_t jsonParser::CharactersContext::getRuleIndex() const {
  return jsonParser::RuleCharacters;
}

void jsonParser::CharactersContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<jsonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCharacters(this);
}

void jsonParser::CharactersContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<jsonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCharacters(this);
}

jsonParser::CharactersContext* jsonParser::characters() {
  CharactersContext *_localctx = _tracker.createInstance<CharactersContext>(_ctx, getState());
  enterRule(_localctx, 18, jsonParser::RuleCharacters);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(87);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << jsonParser::DIGIT)
      | (1ULL << jsonParser::BACKSLASH)
      | (1ULL << jsonParser::LOWERCASE)
      | (1ULL << jsonParser::UPPERCASE))) != 0)) {
      setState(84);
      character();
      setState(89);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CharacterContext ------------------------------------------------------------------

jsonParser::CharacterContext::CharacterContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* jsonParser::CharacterContext::LOWERCASE() {
  return getToken(jsonParser::LOWERCASE, 0);
}

tree::TerminalNode* jsonParser::CharacterContext::UPPERCASE() {
  return getToken(jsonParser::UPPERCASE, 0);
}

tree::TerminalNode* jsonParser::CharacterContext::DIGIT() {
  return getToken(jsonParser::DIGIT, 0);
}

tree::TerminalNode* jsonParser::CharacterContext::BACKSLASH() {
  return getToken(jsonParser::BACKSLASH, 0);
}

jsonParser::EscapeContext* jsonParser::CharacterContext::escape() {
  return getRuleContext<jsonParser::EscapeContext>(0);
}


size_t jsonParser::CharacterContext::getRuleIndex() const {
  return jsonParser::RuleCharacter;
}

void jsonParser::CharacterContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<jsonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCharacter(this);
}

void jsonParser::CharacterContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<jsonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCharacter(this);
}

jsonParser::CharacterContext* jsonParser::character() {
  CharacterContext *_localctx = _tracker.createInstance<CharacterContext>(_ctx, getState());
  enterRule(_localctx, 20, jsonParser::RuleCharacter);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(95);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case jsonParser::LOWERCASE: {
        enterOuterAlt(_localctx, 1);
        setState(90);
        match(jsonParser::LOWERCASE);
        break;
      }

      case jsonParser::UPPERCASE: {
        enterOuterAlt(_localctx, 2);
        setState(91);
        match(jsonParser::UPPERCASE);
        break;
      }

      case jsonParser::DIGIT: {
        enterOuterAlt(_localctx, 3);
        setState(92);
        match(jsonParser::DIGIT);
        break;
      }

      case jsonParser::BACKSLASH: {
        enterOuterAlt(_localctx, 4);
        setState(93);
        match(jsonParser::BACKSLASH);
        setState(94);
        escape();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EscapeContext ------------------------------------------------------------------

jsonParser::EscapeContext::EscapeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* jsonParser::EscapeContext::BACKSLASH() {
  return getToken(jsonParser::BACKSLASH, 0);
}

tree::TerminalNode* jsonParser::EscapeContext::QUOTE_MARK() {
  return getToken(jsonParser::QUOTE_MARK, 0);
}

std::vector<tree::TerminalNode *> jsonParser::EscapeContext::HEX() {
  return getTokens(jsonParser::HEX);
}

tree::TerminalNode* jsonParser::EscapeContext::HEX(size_t i) {
  return getToken(jsonParser::HEX, i);
}


size_t jsonParser::EscapeContext::getRuleIndex() const {
  return jsonParser::RuleEscape;
}

void jsonParser::EscapeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<jsonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterEscape(this);
}

void jsonParser::EscapeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<jsonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitEscape(this);
}

jsonParser::EscapeContext* jsonParser::escape() {
  EscapeContext *_localctx = _tracker.createInstance<EscapeContext>(_ctx, getState());
  enterRule(_localctx, 22, jsonParser::RuleEscape);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(110);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case jsonParser::BACKSLASH: {
        enterOuterAlt(_localctx, 1);
        setState(97);
        match(jsonParser::BACKSLASH);
        break;
      }

      case jsonParser::T__0: {
        enterOuterAlt(_localctx, 2);
        setState(98);
        match(jsonParser::T__0);
        break;
      }

      case jsonParser::QUOTE_MARK: {
        enterOuterAlt(_localctx, 3);
        setState(99);
        match(jsonParser::QUOTE_MARK);
        break;
      }

      case jsonParser::T__1: {
        enterOuterAlt(_localctx, 4);
        setState(100);
        match(jsonParser::T__1);
        break;
      }

      case jsonParser::T__2: {
        enterOuterAlt(_localctx, 5);
        setState(101);
        match(jsonParser::T__2);
        break;
      }

      case jsonParser::T__3: {
        enterOuterAlt(_localctx, 6);
        setState(102);
        match(jsonParser::T__3);
        break;
      }

      case jsonParser::T__4: {
        enterOuterAlt(_localctx, 7);
        setState(103);
        match(jsonParser::T__4);
        break;
      }

      case jsonParser::T__5: {
        enterOuterAlt(_localctx, 8);
        setState(104);
        match(jsonParser::T__5);
        break;
      }

      case jsonParser::T__6: {
        enterOuterAlt(_localctx, 9);
        setState(105);
        match(jsonParser::T__6);
        setState(106);
        match(jsonParser::HEX);
        setState(107);
        match(jsonParser::HEX);
        setState(108);
        match(jsonParser::HEX);
        setState(109);
        match(jsonParser::HEX);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NumberContext ------------------------------------------------------------------

jsonParser::NumberContext::NumberContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

jsonParser::RealContext* jsonParser::NumberContext::real() {
  return getRuleContext<jsonParser::RealContext>(0);
}

jsonParser::Signed_intContext* jsonParser::NumberContext::signed_int() {
  return getRuleContext<jsonParser::Signed_intContext>(0);
}

jsonParser::Unsigned_intContext* jsonParser::NumberContext::unsigned_int() {
  return getRuleContext<jsonParser::Unsigned_intContext>(0);
}


size_t jsonParser::NumberContext::getRuleIndex() const {
  return jsonParser::RuleNumber;
}

void jsonParser::NumberContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<jsonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNumber(this);
}

void jsonParser::NumberContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<jsonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNumber(this);
}

jsonParser::NumberContext* jsonParser::number() {
  NumberContext *_localctx = _tracker.createInstance<NumberContext>(_ctx, getState());
  enterRule(_localctx, 24, jsonParser::RuleNumber);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(115);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(112);
      real();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(113);
      signed_int();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(114);
      unsigned_int();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Signed_intContext ------------------------------------------------------------------

jsonParser::Signed_intContext::Signed_intContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* jsonParser::Signed_intContext::MINUS() {
  return getToken(jsonParser::MINUS, 0);
}

jsonParser::Unsigned_intContext* jsonParser::Signed_intContext::unsigned_int() {
  return getRuleContext<jsonParser::Unsigned_intContext>(0);
}


size_t jsonParser::Signed_intContext::getRuleIndex() const {
  return jsonParser::RuleSigned_int;
}

void jsonParser::Signed_intContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<jsonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSigned_int(this);
}

void jsonParser::Signed_intContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<jsonListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSigned_int(this);
}

jsonParser::Signed_intContext* jsonParser::signed_int() {
  Signed_intContext *_localctx = _tracker.createInstance<Signed_intContext>(_ctx, getState());
  enterRule(_localctx, 26, jsonParser::RuleSigned_int);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(117);
    match(jsonParser::MINUS);
    setState(118);
    unsigned_int();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Unsigned_intContext ------------------------------------------------------------------

jsonParser::Unsigned_intContext::Unsigned_intContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* jsonParser::Unsigned_intContext::ONENINE() {
  return getToken(jsonParser::ONENINE, 0);
}

tree::TerminalNode* jsonParser::Unsigned_intContext::PLUS() {
  return getToken(jsonParser::PLUS, 0);
}

std::vector<tree::TerminalNode *> jsonParser::Unsigned_intContext::DIGIT() {
  return getTokens(jsonParser::DIGIT);
}
